# xrm-mcp

./: .gitignore  CLAUDE.md  README.md  SKILL.md  WHY.md  pyproject.toml
.github/workflows/: hol-skill-validate.yml
src/xrm_mcp/: __init__.py  api.py  auth.py  schema.py  server.py
